--- a/index.html
+++ b/index.html
@@ -1,1 +1,21 @@
+<html lang="en">
+	
+	<title>BeTube - Broadcast Yourself.</title>
 
+	<link rel="stylesheet" href="https://web.archive.org/web/20080711012512cs_/http://s.ytimg.com/yt/css/base_all-vfl46057.css" type="text/css">
+
+	<link rel="search" type="application/opensearchdescription+xml" href="/web/20080711012512/http://www.youtube.com/opensearch?locale=en_US" title="YouTube Video Search">
+	<link rel="icon" href="https://web.archive.org/web/20080711012512im_/http://s.ytimg.com/yt/favicon-vfl1123.ico" type="image/x-icon">
+	<link rel="shortcut icon" href="https://web.archive.org/web/20080711012512im_/http://s.ytimg.com/yt/favicon-vfl1123.ico" type="image/x-icon">
+	
+
+	<meta name="description" content="Share your videos with friends, family, and the world">
+	<meta name="keywords" content="video, sharing, camera phone, video phone, free, upload">
+
+	<link rel="alternate" type="application/rss+xml" title="YouTube - [RSS]" href="/web/20080711012512/http://www.youtube.com/rssls">
+
+	<link rel="alternate" media="handheld" href="https://web.archive.org/web/20080711012512/http://m.youtube.com/index?desktop_uri=%2F&amp;">
+
+	<script type="text/javascript">
+			window.google={kHL:"en"};
+	</script>  
